# pySemVer

./: .coveragerc  .editorconfig  .gitignore  Makefile  README.rst  pyproject.toml
pysemver/: __init__.py  semver.py
tests/: test_factory.py  test_parsing.py
